# Fake_publisher

fake_publisher/: CMakeLists.txt
fake_publisher/cfg/: Error.cfg
fake_publisher/fake_publisher/: package.xml
fake_publisher/fake_publisher/scripts/: publisher.py
fake_publisher/launch/: fake_publisher.launch
fake_publisher/scripts/: client.py
