<?xml version="1.0"?>
<package>
  <name>fake_publisher</name>
  <version>0.0.1</version>
  <description>FAKE_PUBLISHER ROS</description>

  <maintainer email="xisco.bonnin@uib.es">Francisco Bonnin-Pascual</maintainer>
  <maintainer email="marcpozoperez@gmail.com">Daniel Mañogil</maintainer>

  <license>TODO</license>

  <author email="marcpozoperez@gmail.com">Marc Pozo</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>tf</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>tf</run_depend>

  <export>
  </export>
</package>
